[package]
name = "tt"
version = "1.1.0"
edition = "2018"
authors = ["DomesticMoth"]
description = "Terminal Tetris"
readme = "README.md"
license = "CCO-1.0"
repository = "https://github.com/DomesticMoth/tt"

[dependencies]
rand = "0.8.5"
crossterm = "0.22"
clap = { version = "3.1.6", features = ["derive"] }
